Update tests to respect test directory
Using test directory instead of bikes, smoke and mirrors will
guarantee test data cleanup in the end of the successful test.